--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "color your nanoleaf based on nfl teams",
   "main": "src/index.js",
   "scripts": {
-    "dev": "backpack dev"
+    "dev": "backpack dev",
+    "docs": "documentation readme src/index.js --section=API"
   },
   "author": "divyagnan",
   "license": "MIT",
   "devDependencies": {
-    "backpack-core": "^0.4.2"
+    "backpack-core": "^0.4.2",
+    "documentation": "^5.3.1"
   },
   "dependencies": {
     "nanoleaves": "^1.2.0"
