--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "documentation": "^5.3.1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "date-fns": "^1.28.5",
     "nanoleaves": "^1.2.0"
   }
 }
